--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   
   <repositories>
@@ -22,10 +24,11 @@
 	</repositories>
 
   <dependencies>
+  
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.3.1</version>
       <scope>test</scope>
     </dependency>
     
@@ -35,6 +38,6 @@
 	    <version>master-SNAPSHOT</version>
 	</dependency>
 	
-	
   </dependencies>
+  
 </project>
